--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'org.jetbrains.anko:anko-commons:0.10.8'
 
 }
 
